--- a/rococo-auth/src/main/resources/application.yaml
+++ b/rococo-auth/src/main/resources/application.yaml
@@ -53,9 +53,9 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/rococo-auth?serverTimezone=UTC&createDatabaseIfNotExist=true
 rococo-ui:
-  uri: http://127.0.0.1:5173
+  uri: http://localhost:5173
 rococo-auth:
-  uri: http://127.0.0.1:9000
+  uri: http://localhost:9000
 ---
 spring:
   config:
