--- a/rococo-api/src/main/resources/application.yaml
+++ b/rococo-api/src/main/resources/application.yaml
@@ -47,22 +47,17 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://localhost:9000
+          issuer-uri: http://127.0.0.1:9000
   datasource:
     url: jdbc:mysql://localhost:3306/rococo-api?serverTimezone=UTC&createDatabaseIfNotExist=true
 
 rococo-ui:
-  uri: http://localhost:5173
+  uri: http://127.0.0.1:3000
 ---
 spring:
   config:
     activate:
       on-profile: docker
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-          issuer-uri: http://auth.rococo.docker:9000
   datasource:
     url: jdbc:mysql://rococo-db:3306/rococo-api?serverTimezone=UTC&createDatabaseIfNotExist=true
 
