--- a/rococo-api/src/main/resources/application.yaml
+++ b/rococo-api/src/main/resources/application.yaml
@@ -58,6 +58,11 @@ spring:
   config:
     activate:
       on-profile: docker
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://auth.rococo.docker:9000
   datasource:
     url: jdbc:mysql://rococo-db:3306/rococo-api?serverTimezone=UTC&createDatabaseIfNotExist=true
 
