--- a/rococo-client/package.json
+++ b/rococo-client/package.json
@@ -6,7 +6,6 @@
     "dev": "vite dev --host",
     "build": "vite build",
     "build:docker": "vite build --mode docker",
-    "build:test": "vite dev --mode test",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -18,7 +17,6 @@
     "@skeletonlabs/skeleton": "2.1.0",
     "@skeletonlabs/tw-plugin": "0.2.0",
     "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/adapter-static": "^2.0.3",
     "@sveltejs/kit": "^1.20.4",
     "@tailwindcss/forms": "0.5.6",
     "@tailwindcss/typography": "0.5.10",
@@ -48,6 +46,7 @@
     "@floating-ui/dom": "1.5.3",
     "buffer": "^6.0.3",
     "crypto-js": "^4.1.1",
+    "dotenv": "16.3.1",
     "leaflet": "^1.9.4"
   }
 }
