--- a/rococo-api/build.gradle
+++ b/rococo-api/build.gradle
@@ -24,7 +24,7 @@ dependencies {
 jib {
     container {
         ports = ['8080']
-        jvmFlags = ["-Dspring.profiles.active=${System.env.PROFILE}"]
+        jvmFlags = ["-Dspring.profiles.active=docker"]
         creationTime = 'USE_CURRENT_TIMESTAMP'
     }
     from {
