--- a/rococo-api/src/main/resources/application.yaml
+++ b/rococo-api/src/main/resources/application.yaml
@@ -4,14 +4,8 @@ server:
 spring:
   application:
     name: rococo-api
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-          issuer-uri: http://127.0.0.1:9000
 
   datasource:
-    url: jdbc:mysql://localhost:3306/rococo-api?serverTimezone=UTC&createDatabaseIfNotExist=true
     username: root
     password: secret
     hikari:
@@ -39,10 +33,42 @@ spring:
 logging:
   level:
     root: INFO
-    org.springframework.web: DEBUG
+    org.springframework.web: INFO
     org.springframework.security: INFO
     org.springframework.security.oauth2: INFO
-#    org.springframework.boot.autoconfigure: DEBUG
+
+---
+spring:
+  config:
+    activate:
+      on-profile: 'local'
+
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://127.0.0.1:9000
+
+  datasource:
+    url: jdbc:mysql://localhost:3306/rococo-api?serverTimezone=UTC&createDatabaseIfNotExist=true
 
 rococo-ui:
   uri: http://127.0.0.1:3000
+---
+spring:
+  config:
+    activate:
+      on-profile: 'docker'
+
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://auth.rococo.dc:9000
+
+  datasource:
+    url: jdbc:mysql://rococo-db:3306/rococo-api?serverTimezone=UTC&createDatabaseIfNotExist=true
+
+rococo-ui:
+  uri: http://client.rococo.dc
+---
