--- a/rococo-auth/src/main/resources/application.yaml
+++ b/rococo-auth/src/main/resources/application.yaml
@@ -7,7 +7,6 @@ spring:
   mvc:
     log-request-details: true
   datasource:
-    url: jdbc:mysql://localhost:3306/rococo-auth?serverTimezone=UTC&createDatabaseIfNotExist=true
     username: root
     password: secret
     hikari:
@@ -38,13 +37,35 @@ logging:
     org.springframework.web: INFO
     org.springframework.security: INFO
     org.springframework.security.oauth2: INFO
-#    org.springframework.boot.autoconfigure: DEBUG
 
 oauth2:
   client-id: client
   client-secret: '{noop}secret'
 
+---
+spring:
+  config:
+    activate:
+      on-profile: 'local'
+
+  datasource:
+    url: jdbc:mysql://localhost:3306/rococo-auth?serverTimezone=UTC&createDatabaseIfNotExist=true
+
 rococo-ui:
   uri: http://127.0.0.1:3000
 rococo-auth:
   uri: http://127.0.0.1:9000
+---
+spring:
+  config:
+    activate:
+      on-profile: 'docker'
+
+  datasource:
+    url: jdbc:mysql://rococo-db:3306/rococo-auth?serverTimezone=UTC&createDatabaseIfNotExist=true
+
+rococo-ui:
+  uri: http://client.rococo.dc
+rococo-auth:
+  uri: http://auth.rococo.dc:9000
+---
