--- a/rococo-client/package.json
+++ b/rococo-client/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "@skeletonlabs/skeleton": "2.1.0",
     "@skeletonlabs/tw-plugin": "0.2.0",
-    "@sveltejs/adapter-auto": "^2.0.0",
+    "@sveltejs/adapter-static": "2.0.3",
     "@sveltejs/kit": "^1.20.4",
     "@tailwindcss/forms": "0.5.6",
     "@tailwindcss/typography": "0.5.10",
