--- a/rococo-api/build.gradle
+++ b/rococo-api/build.gradle
@@ -24,7 +24,7 @@ dependencies {
 jib {
     container {
         ports = ['8080']
-        jvmFlags = ["-Dspring.profiles.active=docker"]
+        jvmFlags = ["-Dspring.profiles.active=${System.env.PROFILE}"]
         creationTime = 'USE_CURRENT_TIMESTAMP'
     }
     from {
@@ -37,7 +37,7 @@ jib {
         }
     }
     to {
-        image = "${project.ext.registry}/${project.name}"
+        image = "${project.ext.registry}/${project.name}-${System.env.PROFILE}"
         tags = ['latest', "${project.version}"]
     }
 }
