--- a/rococo-auth/build.gradle
+++ b/rococo-auth/build.gradle
@@ -25,7 +25,7 @@ dependencies {
 jib {
     container {
         ports = ['9000']
-        jvmFlags = ["-Dspring.profiles.active=docker"]
+        jvmFlags = ["-Dspring.profiles.active=${System.env.PROFILE}"]
         creationTime = 'USE_CURRENT_TIMESTAMP'
     }
     from {
@@ -38,7 +38,7 @@ jib {
         }
     }
     to {
-        image = "${project.ext.registry}/${project.name}"
+        image = "${project.ext.registry}/${project.name}-${System.env.PROFILE}"
         tags = ['latest', "${project.version}"]
     }
 }
