--- a/rococo-auth/build.gradle
+++ b/rococo-auth/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.2.1'
-    id 'io.spring.dependency-management' version '1.1.4'
-    id 'com.google.cloud.tools.jib' version '3.3.2'
+    id 'org.springframework.boot' version '3.3.0'
+    id 'io.spring.dependency-management' version '1.1.5'
+    id 'com.google.cloud.tools.jib' version '3.4.1'
 }
 
 version = '0.0.1-SNAPSHOT'
@@ -25,7 +25,7 @@ dependencies {
 jib {
     container {
         ports = ['9000']
-        jvmFlags = ["-Dspring.profiles.active=docker"]
+        jvmFlags = ["-Dspring.profiles.active=${System.env.PROFILE}"]
         creationTime = 'USE_CURRENT_TIMESTAMP'
     }
     from {
@@ -38,7 +38,7 @@ jib {
         }
     }
     to {
-        image = "${project.ext.registry}/${project.name}"
+        image = "${project.ext.registry}/${project.name}-${System.env.PROFILE}"
         tags = ['latest', "${project.version}"]
     }
 }
