--- a/rococo-auth/src/main/resources/application.yaml
+++ b/rococo-auth/src/main/resources/application.yaml
@@ -52,7 +52,7 @@ spring:
     url: jdbc:mysql://rococo-db:3306/rococo-auth?serverTimezone=UTC&createDatabaseIfNotExist=true
 
 rococo-ui:
-  uri: http://client.rococo.dc
+  uri: http://client.rococo.dc:81
 rococo-auth:
   uri: http://auth.rococo.dc:9000
 ---
