--- a/rococo-api/src/main/resources/application.yaml
+++ b/rococo-api/src/main/resources/application.yaml
@@ -70,7 +70,7 @@ spring:
     url: jdbc:mysql://rococo-db:3306/rococo-api?serverTimezone=UTC&createDatabaseIfNotExist=true
 
 rococo-ui:
-  uri: http://client.rococo.dc
+  uri: http://client.rococo.dc:81
 ---
 spring:
   config:
