--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -32,29 +32,29 @@ jobs:
         run: |
           docker login --username ${{ vars.DOCKER_HUB_ACC }} --password "${{ secrets.DOCKER_HUB_PASSWORD }}"
 
-      - name: build auth & deploy to staging
+      - name: build auth & deploy to stage
         if: steps.changes.outputs.auth == 'true'
         working-directory: ./
         run: |
           pwd
-          bash ./gradlew :rococo-auth:jib -x :rococo-e2e:test
+          bash ./gradlew --no-daemon :rococo-auth:jib -x :rococo-e2e:test
           docker-compose pull auth.rococo.dc
           docker-compose stop auth.rococo.dc && docker-compose up -d --no-deps auth.rococo.dc
           docker system prune -a -f
           echo "Deploy auth to stage done!"
 
-      - name: build currency & deploy to staging
+      - name: build api & deploy to stage
         if: steps.changes.outputs.api == 'true'
         working-directory: ./
         run: |
           pwd
-          bash ./gradlew :rococo-api:jib -x :rococo-e2e:test
+          bash ./gradlew --no-daemon :rococo-api:jib -x :rococo-e2e:test
           docker-compose pull api.rococo.dc
           docker-compose stop api.rococo.dc && docker-compose up -d --no-deps api.rococo.dc
           docker system prune -a -f
           echo "Deploy api to stage done!"
 
-      - name: build frontend & deploy to staging
+      - name: build frontend & deploy to stage
         if: steps.changes.outputs.client == 'true'
         working-directory: ./rococo-client
         run: |
