--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -37,7 +37,7 @@ jobs:
         working-directory: ./
         run: |
           pwd
-          bash ./gradlew --no-daemon :rococo-auth:jib -x :rococo-e2e:test
+          gradle :rococo-auth:jib -x :rococo-e2e:test
           docker-compose pull auth.rococo.dc
           docker-compose stop auth.rococo.dc && docker-compose up -d --no-deps auth.rococo.dc
           docker system prune -a -f
@@ -48,7 +48,7 @@ jobs:
         working-directory: ./
         run: |
           pwd
-          bash ./gradlew --no-daemon :rococo-api:jib -x :rococo-e2e:test
+          gradle :rococo-api:jib -x :rococo-e2e:test
           docker-compose pull api.rococo.dc
           docker-compose stop api.rococo.dc && docker-compose up -d --no-deps api.rococo.dc
           docker system prune -a -f
