--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -38,8 +38,8 @@ jobs:
         run: |
           pwd
           gradle :rococo-auth:jib -x :rococo-e2e:test
-          docker-compose pull auth.rococo.dc
-          docker-compose stop auth.rococo.dc && docker-compose up -d --no-deps auth.rococo.dc
+          docker compose pull auth.rococo.dc
+          docker compose stop auth.rococo.dc && docker compose up -d --no-deps auth.rococo.dc
           docker system prune -a -f
           echo "Deploy auth to stage done!"
 
@@ -49,8 +49,8 @@ jobs:
         run: |
           pwd
           gradle :rococo-api:jib -x :rococo-e2e:test
-          docker-compose pull api.rococo.dc
-          docker-compose stop api.rococo.dc && docker-compose up -d --no-deps api.rococo.dc
+          docker compose pull api.rococo.dc
+          docker compose stop api.rococo.dc && docker compose up -d --no-deps api.rococo.dc
           docker system prune -a -f
           echo "Deploy api to stage done!"
 
@@ -63,7 +63,7 @@ jobs:
           docker push ${{ vars.DOCKER_HUB_ACC }}/rococo-client-${{ env.PROFILE }}:0.0.1-SNAPSHOT
           docker push ${{ vars.DOCKER_HUB_ACC }}/rococo-client-${{ env.PROFILE }}:latest
           cd ../ || exit 1
-          docker-compose pull client.rococo.dc
-          docker-compose stop client.rococo.dc && docker-compose up -d --no-deps client.rococo.dc
+          docker compose pull client.rococo.dc
+          docker compose stop client.rococo.dc && docker compose up -d --no-deps client.rococo.dc
           docker system prune -a -f
           echo "Deploy frontend to stage done!"
