--- a/rococo-client/package.json
+++ b/rococo-client/package.json
@@ -6,6 +6,7 @@
     "dev": "vite dev --host",
     "build": "vite build",
     "build:docker": "vite build --mode docker",
+    "build:stage": "vite build --mode stage",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
