--- a/rococo-client/.env.stage
+++ b/rococo-client/.env.stage
@@ -1,5 +1,5 @@
 VITE_AUTH_URL=http://auth.rococo.website
-VITE_FRONT_HOST=http://rococo.website
+VITE_FRONT_HOST=rococo.website
 VITE_FRONT_URL=http://rococo.website
 VITE_API_URL=http://api.rococo.website
 VITE_RESPONSE_TYPE=code
