--- a/rococo-auth/src/main/resources/application.yaml
+++ b/rococo-auth/src/main/resources/application.yaml
@@ -65,7 +65,7 @@ spring:
     url: jdbc:mysql://rococo-db:3306/rococo-auth?serverTimezone=UTC&createDatabaseIfNotExist=true
 
 rococo-ui:
-  uri: https://rococo.website
+  uri: http://rococo.website
 rococo-auth:
-  uri: https://auth.rococo.website
+  uri: http://auth.rococo.website
 ---
