--- a/rococo-api/src/main/resources/application.yaml
+++ b/rococo-api/src/main/resources/application.yaml
@@ -70,7 +70,7 @@ spring:
     url: jdbc:mysql://rococo-db:3306/rococo-api?serverTimezone=UTC&createDatabaseIfNotExist=true
 
 rococo-ui:
-  uri: http://client.rococo.dc
+  uri: http://client.rococo.dc:81
 ---
 spring:
   config:
@@ -80,11 +80,11 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: https://auth.rococo.website
+          issuer-uri: http://auth.rococo.website
 
   datasource:
     url: jdbc:mysql://rococo-db:3306/rococo-api?serverTimezone=UTC&createDatabaseIfNotExist=true
 
 rococo-ui:
-  uri: https://rococo.website
+  uri: http://rococo.website
 ---
