--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,11 @@ subprojects {
         oauth2AuthorizationServerVersion = '1.3.1'
         lombokVersion = '1.18.32'
         jsr305Version = '3.0.2'
-        dockerImage = System.getProperty("os.arch") == "arm64" ? "arm64v8/eclipse-temurin:21-jre" : "eclipse-temurin:21-jre"
-        dockerArch = System.getProperty("os.arch") == "arm64" ? "arm64" : "amd64"
+        dockerImage = System.getProperty("os.arch") == "arm64" || System.getProperty("os.arch") == "aarch64"
+                ? "arm64v8/eclipse-temurin:21-jre"
+                : "eclipse-temurin:21-jre"
+        dockerArch = System.getProperty("os.arch") == "arm64" || System.getProperty("os.arch") == "aarch64"
+                ? "arm64"
+                : "amd64"
     }
 }
