--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -36,13 +36,13 @@ jobs:
           : # pull browser (see browsers.json)        
           docker pull selenoid/vnc_chrome:125.0
           : # run e2e tests
-          docker-compose -f docker-compose.e2e.yml up -d
+          docker-compose -f docker-compose-e2e.yml up -d
           docker ps -a
           docker wait rococo-e2e
           exit_code=$(docker inspect -f '{{.State.ExitCode}}' rococo-e2e)
           echo "### Test logs ###"
           docker logs rococo-e2e
-          docker-compose -f docker-compose.e2e.yml down
+          docker-compose -f docker-compose-e2e.yml down
           docker system prune -a -f
           if [ "$exit_code" -eq "0" ]; then
             echo "Tests passed successfully!"
