--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       PROFILE: docker
+      PREFIX: dtuchs
     steps:
       - name: Setup JDK
         uses: actions/setup-java@v4
