--- a/rococo-e2e/Dockerfile
+++ b/rococo-e2e/Dockerfile
@@ -7,6 +7,7 @@ ENV ALLURE_DOCKER_API=${ALLURE}
 WORKDIR /heisenbug-2023-autumn
 COPY ./gradle ./gradle
 COPY ./rococo-e2e ./rococo-e2e
+COPY ./gradlew ./
 COPY ./build.gradle ./
 COPY ./settings.gradle ./
 COPY ./gradle.properties ./
