--- a/.github/workflows/client-stage.yaml
+++ b/.github/workflows/client-stage.yaml
@@ -17,19 +17,18 @@ jobs:
       - name: Push required props to GITHUB_ENV
         run: |
           echo "PROFILE=stage" >> $GITHUB_ENV
-          echo "PREFIX=dtuchs" >> $GITHUB_ENV
 
       - name: Docker login
         run: |
-          docker login --username ${{ vars.DOCKER_HUB_ACC }} --password "${{ secrets.DOCKER_HUB_PASSWORD }}"
+          docker login --username dtuchs --password "${{ secrets.DOCKER_HUB_PASSWORD }}"
 
       - name: Build frontend & deploy to stage
         working-directory: ./rococo-client
         run: |
           pwd
-          docker build --build-arg PROFILE=${{ env.PROFILE }} -t ${{ vars.DOCKER_HUB_ACC }}/rococo-client-${{ env.PROFILE }}:0.0.1-SNAPSHOT -t ${{ vars.DOCKER_HUB_ACC }}/rococo-client-${{ env.PROFILE }}:latest .
-          docker push ${{ vars.DOCKER_HUB_ACC }}/rococo-client-${{ env.PROFILE }}:0.0.1-SNAPSHOT
-          docker push ${{ vars.DOCKER_HUB_ACC }}/rococo-client-${{ env.PROFILE }}:latest
+          docker build --build-arg PROFILE=${{ env.PROFILE }} -t dtuchs/rococo-client-${{ env.PROFILE }}:0.0.1-SNAPSHOT -t dtuchs/rococo-client-${{ env.PROFILE }}:latest .
+          docker push dtuchs/rococo-client-${{ env.PROFILE }}:0.0.1-SNAPSHOT
+          docker push dtuchs/rococo-client-${{ env.PROFILE }}:latest
           cd ../ || exit 1
           docker compose pull client.rococo.dc
           docker compose stop client.rococo.dc && docker compose up -d --no-deps client.rococo.dc
