--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -1,9 +1,7 @@
-name: auth-stage
+name: e2e
 on:
   pull_request:
     types: [opened, reopened, synchronize]
-    branches-ignore:
-      - master
 
 jobs:
   e2e:
