--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -59,7 +59,7 @@ jobs:
           fi
 
       - name: Comment
-      - uses: actions/github-script@v7
+        uses: actions/github-script@v7
         if: always()
         with:
           script: |
@@ -77,7 +77,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Check Changes
-      - uses: dorny/paths-filter@v3
+        uses: dorny/paths-filter@v3
         id: changes
         with:
           filters: |
