--- a/build.gradle
+++ b/build.gradle
@@ -3,23 +3,30 @@ plugins {
 }
 
 group = 'guru.qa'
-sourceCompatibility = '21'
 
-subprojects {
+allprojects {
+    apply plugin: 'java'
+
     repositories {
         mavenCentral()
     }
-    ext {
-        registry = 'dtuchs'
 
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(21)
+        }
+    }
+}
+
+subprojects {
+    ext {
         mysqlDriverVersion = '8.0.33'
-        oauth2AuthorizationServerVersion = '1.3.1'
-        lombokVersion = '1.18.32'
+        lombokVersion = '1.18.34'
         jsr305Version = '3.0.2'
-        dockerImage = System.getProperty("os.arch") == "arm64" || System.getProperty("os.arch") == "aarch64"
-                ? "arm64v8/eclipse-temurin:21-jre"
-                : "eclipse-temurin:21-jre"
-        dockerArch = System.getProperty("os.arch") == "arm64" || System.getProperty("os.arch") == "aarch64"
+        dockerImage = System.getProperty("os.arch") == "aarch64"
+                ? "arm64v8/eclipse-temurin:21-jdk"
+                : "eclipse-temurin:21-jdk"
+        dockerArch = System.getProperty("os.arch") == "aarch64"
                 ? "arm64"
                 : "amd64"
     }
