--- a/rococo-api/build.gradle
+++ b/rococo-api/build.gradle
@@ -1,7 +1,6 @@
 plugins {
-    id 'java'
-    id 'org.springframework.boot' version '3.3.0'
-    id 'io.spring.dependency-management' version '1.1.5'
+    id 'org.springframework.boot' version '3.3.4'
+    id 'io.spring.dependency-management' version '1.1.6'
     id 'com.google.cloud.tools.jib' version '3.4.1'
 }
 
@@ -24,7 +23,7 @@ dependencies {
 jib {
     container {
         ports = ['8080']
-        jvmFlags = ["-Dspring.profiles.active=${System.env.PROFILE}"]
+        jvmFlags = ["-Dspring.profiles.active=docker"]
         creationTime = 'USE_CURRENT_TIMESTAMP'
     }
     from {
@@ -37,7 +36,7 @@ jib {
         }
     }
     to {
-        image = "${project.ext.registry}/${project.name}-${System.env.PROFILE}"
+        image = "dtuchs/${project.name}"
         tags = ['latest', "${project.version}"]
     }
 }
