--- a/rococo-api/src/main/resources/application.yaml
+++ b/rococo-api/src/main/resources/application.yaml
@@ -70,21 +70,5 @@ spring:
     url: jdbc:mysql://rococo-db:3306/rococo-api?serverTimezone=UTC&createDatabaseIfNotExist=true
 
 rococo-ui:
-  uri: http://client.rococo.dc:81
----
-spring:
-  config:
-    activate:
-      on-profile: 'stage'
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-          issuer-uri: http://auth.rococo.website
-
-  datasource:
-    url: jdbc:mysql://rococo-db:3306/rococo-api?serverTimezone=UTC&createDatabaseIfNotExist=true
-
-rococo-ui:
-  uri: http://rococo.website
+  uri: http://client.rococo.dc
 ---
