--- a/rococo-auth/build.gradle
+++ b/rococo-auth/build.gradle
@@ -1,7 +1,6 @@
 plugins {
-    id 'java'
-    id 'org.springframework.boot' version '3.3.0'
-    id 'io.spring.dependency-management' version '1.1.5'
+    id 'org.springframework.boot' version '3.3.4'
+    id 'io.spring.dependency-management' version '1.1.6'
     id 'com.google.cloud.tools.jib' version '3.4.1'
 }
 
@@ -13,7 +12,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
     implementation "org.springframework.boot:spring-boot-starter-validation"
-    implementation "org.springframework.security:spring-security-oauth2-authorization-server:${project.ext.oauth2AuthorizationServerVersion}"
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-authorization-server'
     implementation "com.google.code.findbugs:jsr305:${project.ext.jsr305Version}"
     annotationProcessor "org.projectlombok:lombok:${project.ext.lombokVersion}"
     compileOnly "org.projectlombok:lombok:${project.ext.lombokVersion}"
@@ -25,7 +24,7 @@ dependencies {
 jib {
     container {
         ports = ['9000']
-        jvmFlags = ["-Dspring.profiles.active=${System.env.PROFILE}"]
+        jvmFlags = ["-Dspring.profiles.active=docker"]
         creationTime = 'USE_CURRENT_TIMESTAMP'
     }
     from {
@@ -38,7 +37,7 @@ jib {
         }
     }
     to {
-        image = "${project.ext.registry}/${project.name}-${System.env.PROFILE}"
+        image = "dtuchs/${project.name}"
         tags = ['latest', "${project.version}"]
     }
 }
