--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -9,6 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     env:
       ARCH: amd64
+      ALLURE_DOCKER_API: ${{ secrets.ALLURE_DOCKER_API }}
+      BUILD_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+      HEAD_COMMIT_MESSAGE: ${{ github.event.pull_request.head.sha || github.sha }}
+      EXECUTION_TYPE: github
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -21,3 +25,23 @@ jobs:
         run: |
           ./gradlew jibDockerBuild -x :rococo-e2e:test
           docker image ls
+      - name: Pull browsers
+        run: |
+          docker pull selenoid/vnc_chrome:125.0
+      - name: Run e2e tests
+        id: e2e-tests
+        run: |
+          docker compose -f docker-compose-e2e.yml up -d
+          docker wait rococo-e2e
+          exit_code=$(docker inspect -f '{{.State.ExitCode}}' rococo-e2e)
+          echo "e2e_exit_code=$exit_code" >> $GITHUB_OUTPUT
+          docker logs rococo-e2e
+          docker compose -f docker-compose-e2e.yml down
+          if [ "$exit_code" -eq "0" ]; then
+            echo "Tests passed successfully!"
+            exit 0
+          else
+            echo "Tests failed!"
+            exit 1
+          fi
+
