--- a/docker-compose-e2e.yml
+++ b/docker-compose-e2e.yml
@@ -80,11 +80,11 @@ services:
       - ./selenoid:/etc/selenoid
       - /var/run/docker.sock:/var/run/docker.sock
     restart: unless-stopped
-    command: [ "-conf", "/etc/selenoid/browsers.json", "-limit", "2", "-video-output-dir", "/opt/selenoid/video", "-log-output-dir", "/opt/selenoid/logs", "-container-network", "niffler_test-network" ]
+    command: [ "-conf", "/etc/selenoid/browsers.json", "-limit", "2", "-video-output-dir", "/opt/selenoid/video", "-log-output-dir", "/opt/selenoid/logs", "-container-network", "heisenbug-2023-autumn_rococo-network" ]
     ports:
       - 4444:4444
     networks:
-      - test-network
+      - rococo-network
 
 networks:
   rococo-network:
