--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -44,4 +44,28 @@ jobs:
             echo "Tests failed!"
             exit 1
           fi
+      - name: Add comment to PR
+        if: always()
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const issues = await github.rest.pulls.list({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              state: 'open',
+              head: `${context.repo.owner}:${context.ref.replace('refs/heads/', '')}`
+            })
+            const pr = context.issue.number || issues.data[0].number
+            const exitCode = ${{ steps.e2e-tests.outputs.e2e_exit_code }}
+            const reportUrl = 'https://allure.niffler-stage.qa.guru/api/allure-docker-service/projects/rococo/reports/latest/index.html'
+            const historyUrl = 'https://allure.niffler-stage.qa.guru/allure-docker-service-ui/projects/rococo'
+            const message = exitCode == '0' ?
+              '✅ Good bye, ROCOCO ✅ There is the [report](${reportUrl})\n🕓 All reports [history](${historyUrl})' :
+              '🔴 TEST RUN FAILED 🔴 There is the [report](${reportUrl})\n🕓 All reports [history](${historyUrl})'
+            github.rest.issues.createComment({
+              issue_number: pr,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: message
+            })
 
