--- a/docker-compose-e2e.yml
+++ b/docker-compose-e2e.yml
@@ -66,6 +66,11 @@ services:
         BUILD_URL: ${BUILD_URL}
         HEAD_COMMIT_MESSAGE: ${HEAD_COMMIT_MESSAGE}
         EXECUTION_TYPE: ${EXECUTION_TYPE}
+    environment:
+      ALLURE_DOCKER_API: ${ALLURE_DOCKER_API}
+      BUILD_URL: ${BUILD_URL}
+      HEAD_COMMIT_MESSAGE: ${HEAD_COMMIT_MESSAGE}
+      EXECUTION_TYPE: ${EXECUTION_TYPE}
     depends_on:
       client.rococo.dc:
         condition: service_started
