--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -52,13 +52,6 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const issues = await github.rest.pulls.list({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              state: 'open',
-              head: `${context.repo.owner}:${context.ref.replace('refs/heads/', '')}`
-            })
-            const pr = context.issue.number || issues.data[0].number
             const exitCode = ${{ steps.e2e-tests.outputs.e2e_exit_code }}
             const reportUrl = 'https://allure.niffler-stage.qa.guru/api/allure-docker-service/projects/rococo/reports/latest/index.html'
             const historyUrl = 'https://allure.niffler-stage.qa.guru/allure-docker-service-ui/projects/rococo'
@@ -66,7 +59,7 @@ jobs:
               `✅ Good bye, ROCOCO ✅ There is the [report](${reportUrl})\n🕓 All reports [history](${historyUrl})` :
               `🔴 TEST RUN FAILED 🔴 There is the [report](${reportUrl})\n🕓 All reports [history](${historyUrl})`
             github.rest.issues.createComment({
-              issue_number: pr,
+              issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
               body: message
