--- a/rococo-api/build.gradle
+++ b/rococo-api/build.gradle
@@ -41,6 +41,9 @@ jib {
     }
 }
 
+tasks.jib.dependsOn test
+tasks.jibDockerBuild.dependsOn test
+
 tasks.named('test') {
     useJUnitPlatform()
 }
