--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -21,3 +21,21 @@ jobs:
         run: |
           bash ./gradlew jibDockerBuild -x :rococo-e2e:test
           docker image ls
+      - name: Pull browsers
+        run: |
+          docker pull selenoid/vnc_chrome:125.0
+      - name: Run e2e tests
+        run: |
+          docker compose -f docker-compose-e2e.yml up -d
+          docker wait rococo-e2e
+          exit_code=$(docker inspect -f '{{.State.ExitCode}}' rococo-e2e)
+          echo "e2e_exit_code=$exit_code" >> $GITHUB_OUTPUT
+          docker logs rococo-e2e
+          docker compose -f docker-compose-e2e.yml down
+          if ["exit_code" -eq "0"]; then 
+            echo "Tests Passed!"
+            exit 0
+          else 
+            echo "Tests Failed!"
+            exit 1
+          fi
