--- a/docker-compose-e2e.yml
+++ b/docker-compose-e2e.yml
@@ -73,12 +73,14 @@ services:
       - rococo-network
 
   selenoid:
+    container_name: selenoid
     image: aerokube/selenoid:1.11.2
     platform: linux/${ARCH}
     volumes:
-      - "/selenoid:/etc/selenoid"
-      - "/var/run/docker.sock:/var/run/docker.sock"
-    command: ["-conf", "/etc/selenoid/browsers.json", "-limit", "2", "-video-output-dir", "/opt/selenoid/video", "-log-output-dir", "/opt/selenoid/logs", "-container-network", "heisenbug-2023-autumn_rococo-network"]
+      - ./selenoid:/etc/selenoid
+      - /var/run/docker.sock:/var/run/docker.sock
+    restart: unless-stopped
+    command: [ "-conf", "/etc/selenoid/browsers.json", "-limit", "2", "-video-output-dir", "/opt/selenoid/video", "-log-output-dir", "/opt/selenoid/logs", "-container-network", "heisenbug-2023-autumn_rococo-network" ]
     ports:
       - 4444:4444
     networks:
